Fix card overflow issue

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -2,11 +2,12 @@ header {
   width: 100%;
   display: flex;
   flex-flow: row wrap;
-  padding: 25px;
+  padding: 25px 25px 10px 25px;
   position: sticky;
   top: 0px;
   z-index: 9999;
   justify-content: space-between;
+  margin: 0;
 
   .logo {
     height: auto;
